# GisoNet

./: .gitignore  .rustfmt.toml  Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: ci.yml
common/: Cargo.toml
common/src/: lib.rs  protocol.rs  route.rs  transport.rs
daemon/: Cargo.toml
daemon/src/: config.rs  lib.rs  main.rs  persist.rs  pid.rs  state.rs  store.rs
daemon/src/dns/: handler.rs  mod.rs
daemon/src/ipc/: handler.rs  mod.rs
daemon/src/proxy/: cert.rs  handler.rs  mod.rs
ui/: Cargo.toml
ui/src/: client.rs  main.rs  render.rs  state.rs  tray.rs
